--- a/index.html
+++ b/index.html
@@ -286,8 +286,7 @@
           <h2 id="banner-title">Fresh <span class="text-primary">Grocery</span><br>
             Shopping
           </h2>
-          <p id="banner-description">It Is a long established fact that a readerwill be <br>
-            the readable content of a page
+          <p id="banner-description">Fresh, Organic & Healthy grocies delivered at your door step.
           </p>
           <div class="iq-btn-container" id="banner-action">
             <a href="./category-list.html">
