--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,7 @@
                             <li><span class="text-body ms-1">(2)</span></li>
                           </ul>
                         </div>
-                        <h5 class="text-primary">$7.50</h5>
+                        <h5 class="text-primary">₹60.00</h5>
                       </div>
                     </div>
                   </a>
@@ -1467,7 +1467,7 @@
                             <li><span class="text-body ms-1">(2)</span></li>
                           </ul>
                         </div>
-                        <h5 class="text-primary">$25</h5>
+                        <h5 class="text-primary">₹80.00</h5>
                       </div>
                     </div>
                   </a>
@@ -1495,8 +1495,8 @@
                           </ul>
                         </div>
                         <h6 class="m-0">
-                          <small class="text-decoration-line-through">$10</small>
-                          <span class="text-primary h5">$8</span>
+                          <small class="text-decoration-line-through">₹145.00</small>
+                          <span class="text-primary h5">₹120.00</span>
                         </h6>
                       </div>
                     </div>
@@ -1525,8 +1525,8 @@
                           </ul>
                         </div>
                         <h6 class="m-0">
-                          <small class="text-decoration-line-through">$10</small>
-                          <span class="text-primary h5">$8</span>
+                          <small class="text-decoration-line-through">₹166.00</small>
+                          <span class="text-primary h5">₹142.00</span>
                         </h6>
                       </div>
                     </div>
@@ -1554,7 +1554,7 @@
                             <li><span class="text-body ms-1">(2)</span></li>
                           </ul>
                         </div>
-                        <h5 class="text-primary">$300</h5>
+                        <h5 class="text-primary">₹240.00</h5>
                       </div>
                     </div>
                   </a>
@@ -1582,8 +1582,8 @@
                           </ul>
                         </div>
                         <h6 class="m-0">
-                          <small class="text-decoration-line-through">$10</small>
-                          <span class="text-primary h5">$8</span>
+                          <small class="text-decoration-line-through">₹172.00</small>
+                          <span class="text-primary h5">₹160.00</span>
                         </h6>
                       </div>
                     </div>
