--- a/contact-us.html
+++ b/contact-us.html
@@ -319,16 +319,14 @@ img.footer-logo{
                     <span class="fav"><i class="fas fa-envelope"></i></span>
                     <h4>Email</h4>
                     <p>
-                        support@themes.com
-                        <br>support@iqonic.com
+                       123018047@sastra.ac.in
                     </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fav"><i class="fas fa-phone-alt"></i></span>
                     <h4>Phone</h4>
                     <p>
-                        +91 123 456 7890
-                        <br>+91 123 456 7890
+                        +91 6309788588
                     </p>
                 </div>
             </div>
