--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -304,7 +304,7 @@ img.footer-logo{
                                  <div class="iq-title-divider"></div>
                               </div>
                               <span>
-                                 Price: $5 — $1,200
+                                 Price: ₹50.00 — ₹500.00
                               </span>
                            </div>
                         </div>
@@ -414,7 +414,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹140.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -464,7 +464,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹220.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
