--- a/shop-left-sidebar.html
+++ b/shop-left-sidebar.html
@@ -514,7 +514,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹90.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -564,7 +564,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹160.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -614,7 +614,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹320.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -664,7 +664,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹60.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -714,7 +714,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹120.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -764,7 +764,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹60.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -814,7 +814,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹60.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -864,7 +864,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹260.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -914,7 +914,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹150.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
@@ -964,7 +964,7 @@ img.footer-logo{
                         <div class="d-flex align-items-center justify-content-between my-2">
                             <h6 class="m-0">
                                 <span class="text-decoration-line-through"></span>
-                                <span class="text-primary"><b>$100</b></span>
+                                <span class="text-primary"><b>₹140.00</b></span>
                             </h6>
                             <div class="iq-ratings">
                                 <div class="d-flex align-items-center text-secondary list-inline p-0 m-0">
