--- a/checkout.html
+++ b/checkout.html
@@ -424,6 +424,9 @@ span.price {
                                       <label for="cvv">CVV</label>
                                       <input type="text" id="cvv" name="cvv" placeholder="352">
                                     </div>
+					  <label>
+                                <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
+                              </label>
                                   </div>
                                 </div>
                                 
