--- a/checkout.html
+++ b/checkout.html
@@ -425,7 +425,7 @@ span.price {
                                       <input type="text" id="cvv" name="cvv" placeholder="352">
                                     </div>
 					  <label>
-                                <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
+                                <input type="checkbox"  name="sameadr"> Cash On delivery
                               </label>
                                   </div>
                                 </div>
