--- a/snacks.html
+++ b/snacks.html
@@ -304,7 +304,7 @@ img.footer-logo{
                                  <div class="iq-title-divider"></div>
                               </div>
                               <span>
-                                 Price: $5 — $1,200
+                                 Price: 100-1500
                               </span>
                            </div>
                         </div>
