--- a/left-sidebar-blog.html
+++ b/left-sidebar-blog.html
@@ -265,12 +265,12 @@ img.footer-logo{
                 <div class="row align-items-center">
                     <div class="col-sm-12">
                         <nav aria-label="breadcrumb" class="text-center iq-breadcrumb-two">
-                        <h2 class="title">Left Sidebar Blog</h2>
+                        <h2 class="title">Blog</h2>
                         <ol class="breadcrumb main-bg">
                             <li class="breadcrumb-item">
                                 <a href="./index.html"><i class="fas fa-home me-2"></i>Home</a>
                             </li>
-                            <li class="breadcrumb-item active">Left Sidebar Blog		
+                            <li class="breadcrumb-item active">Blog		
                             </li>
                         </ol>
                         </nav>
