--- a/index.html
+++ b/index.html
@@ -1802,7 +1802,7 @@
     </div>
     <div class="iq-title-box text-center">
       <span class="iq-subtitle">Trending Topic</span>
-      <h3 class="iq-title">Foodsto Blog Posts</h3>
+      <h3 class="iq-title">FreshMart Blog Posts</h3>
       <div class="iq-title-divider"></div>
     </div>
     <div class="latest-blog overflow-hidden">
