--- a/about-us.html
+++ b/about-us.html
@@ -305,7 +305,7 @@ img.footer-logo{
             data-iq-trigger="scroll">
             <div class="iq-title-box mb-2">
                <span class="iq-subtitle">About Us</span>
-               <h2 class="iq-title">We make Organic Food In Market</h2>
+               <h2 class="iq-title">We grow Organic Food</h2>
                <div class="iq-title-divider"></div>
             </div>
             <p class="mb-0">
